Adding a Website Title, configuring body and head, addind a image and doing a line break

--- a/AndrewTate.html
+++ b/AndrewTate.html
@@ -1,3 +1,16 @@
-<h1>I am a heading/title.</h1>
-<p>I am a paragraph.</p>
-<a href="https://google.com" target="_blank" title="google.com">I am a link.</a>
+<!DOCTYPE html>
+<html>
+<head>
+	<title>This is the website title</title>
+</head>
+<body>
+	<h1>I am a heading.</h1>
+	<p>I am a paragraph.</p>
+	<p><b>This is a text in bold</b></p>
+	<p><i>This is a text in italic</i></p>
+	<p>I am now going to do a line break: <br> There we go</p>
+	<a href="https://google.com" target="_blank" title="google.com">I am a link.</a>
+	<img src="https://tse4.mm.bing.net/th?id=OIP.WO7SvRp024gTy2p0JvgFugHaJ3&pid=Api&P=0&h=180">
+</body>
+</html>
+
