Wrote the CSS for the website and fixed some things

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<title>Mario</title>
 	<link rel="icon" href="https://tse1.mm.bing.net/th?id=OIP.9_iM3YzMWZQgQKOF305iCgHaIZ&pid=Api&P=0&h=180">
+	<link rel="stylesheet" type="text/css" href="css/hero.css">
 </head>
 <body>
 
@@ -10,7 +11,7 @@
 	<header>
 		<img src="https://tse1.mm.bing.net/th?id=OIP.9_iM3YzMWZQgQKOF305iCgHaIZ&pid=Api&P=0&h=180">
 		<h1>Mario</h1>
-		<h2>How was the Super Mario Bros franchise created</h2>
+		<h2>How was the Super Mario Bros franchise created?</h2>
 	</header>
 
 	<!-- Creating a main element -->
@@ -25,7 +26,8 @@
 	<!-- Creating a footer element -->
 	<footer>
 		<p>Keep in mind that the information given in this site is purely for fun, and that half of it was created whilst I was writing the text. So, don't take it to serious, and don't believe everything I said.<br>
-		This website was created thanks to Rich Armstrong's class on HTML. &copy; Lucas</p>
+		This website was created thanks to Rich Armstrong's class on HTML. <br>
+		 &copy; Lucas</p>
 	</footer>
 </body>
 </html>
